# fastapi-serverless-aws-backend-service

./: Dockerfile  LICENSE  README.md  cookiecutter.json  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: cicd.yml
scripts/: build  check  deploy  lint  remove  start  test
src/: config.py  main.py
src/api/: exceptions.py  health.py
src/api/v1/: app.py
src/api/v1/tests/: conftest.py  test_hello.py
src/api/v2/: app.py
src/api/v2/tests/: conftest.py
src/core/: config.py  exception_handlers.py  logger.py  middleware.py
src/tests/: conftest.py  test_exceptions.py  test_health.py  test_hello.py
{{cookiecutter.directory_name}}/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  package.json  pyproject.toml  serverless.yml
{{cookiecutter.directory_name}}/.github/workflows/: cicd.yml
{{cookiecutter.directory_name}}/scripts/: create-domain  delete-domain  deploy  remove  validate-stage-name
{{cookiecutter.directory_name}}/src/: main.py
{{cookiecutter.directory_name}}/src/api/: health.py
{{cookiecutter.directory_name}}/src/api/v1/: app.py
{{cookiecutter.directory_name}}/src/api/v2/tests/: test_hello.py
{{cookiecutter.directory_name}}/src/core/: logger.py
{{cookiecutter.directory_name}}/src/tests/: test_exceptions.py  test_health.py  test_hello.py
