[tool.poetry]
name = "fastapi-serverless-aws-baceknd-service"
version = "0.1.0"
description = "Welcome to the FastAPI Serverless AWS Backend Server project! This project is designed to provide a quick and easy way to get started with building a production ready backend server using the FastAPI web framework and deploying it to AWS using serverless technology"
authors = ["Roy Pasternak <roy@larium.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.88.0"}
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .serverless
  | node_modules
)/
'''

[tool.isort]
profile = "black"
group_by_package = true
combine_straight_imports = true
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src"]
extend_skip = [".serverless", "node_modules"]